build: conecta o banco de dados h2 a minha aplicação spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=CadastroDeNinjas
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configurações do banco de dados com Fallback (Valor Padrão)
+# Se a variável DATABASE_URL não existir, ele usa o banco em memória automaticamente
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.h2.Driver
+
+# Correção dos colchetes para chaves e valores padrão
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+# Formata o SQL para ficar legível no console
+spring.jpa.properties.hibernate.format_sql=true
