feat: Migrations para tb_cadastro incluindo a coluna de rank

--- a/${project.build.directory}/classes/application.properties
+++ b/${project.build.directory}/classes/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-# Configurações do JPA / Hibernate
+# Configuraï¿½ï¿½es do JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
